{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 9,
  "lineage": "8938bd54-31c1-5a4d-e8e2-dd3c611087ae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ebs_tf_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-037202f327ae27ef3",
            "arn": "arn:aws:ec2:eu-west-2:766446780403:instance/i-0e8e4d3e51d30e2f0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e8e4d3e51d30e2f0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ebs-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b3d2579d77acd757",
            "private_dns": "ip-10-0-1-63.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.63",
            "public_dns": "ec2-35-176-211-154.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.176.211.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c830945e4497543b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08d8d5a68d4255089"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-010307a112531d700",
            "tags": {
              "name": "EBSTerraformInstance"
            },
            "tags_all": {
              "name": "EBSTerraformInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08d8d5a68d4255089"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_security_group.ebs_tf_sg",
            "aws_subnet.ebs_public",
            "aws_vpc.my_vpc",
            "data.aws_ssm_parameter.instance_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ebs_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766446780403:internet-gateway/igw-039c6ee181ea5d3bc",
            "id": "igw-039c6ee181ea5d3bc",
            "owner_id": "766446780403",
            "tags": {
              "Name": "ebsIGW"
            },
            "tags_all": {
              "Name": "ebsIGW"
            },
            "vpc_id": "vpc-0d34c4a64e92c4525"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ebs_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766446780403:route-table/rtb-07a87e9f4e2148e97",
            "id": "rtb-07a87e9f4e2148e97",
            "owner_id": "766446780403",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-039c6ee181ea5d3bc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ebsPublicRT"
            },
            "tags_all": {
              "Name": "ebsPublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d34c4a64e92c4525"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ebs_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ebs_subnet_rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ba8fc4dcef14062",
            "route_table_id": "rtb-07a87e9f4e2148e97",
            "subnet_id": "subnet-010307a112531d700"
          },
          "dependencies": [
            "aws_internet_gateway.ebs_igw",
            "aws_route_table.ebs_public_rt",
            "aws_subnet.ebs_public",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ebs_tf_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766446780403:security-group/sg-08d8d5a68d4255089",
            "description": "allow all traffic",
            "egress": [],
            "id": "sg-08d8d5a68d4255089",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ebs_tf_sg",
            "name_prefix": "",
            "owner_id": "766446780403",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "EBSTerraformSG"
            },
            "tags_all": {
              "name": "EBSTerraformSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d34c4a64e92c4525"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ebs_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766446780403:subnet/subnet-0899d60dfccf336db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0899d60dfccf336db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "766446780403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ebsPrivateSubnet"
            },
            "tags_all": {
              "Name": "ebsPrivateSubnet"
            },
            "vpc_id": "vpc-0d34c4a64e92c4525"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ebs_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766446780403:subnet/subnet-010307a112531d700",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010307a112531d700",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "766446780403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ebsPublicSubnet"
            },
            "tags_all": {
              "Name": "ebsPublicSubnet"
            },
            "vpc_id": "vpc-0d34c4a64e92c4525"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:766446780403:vpc/vpc-0d34c4a64e92c4525",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09a475708704d4570",
            "default_route_table_id": "rtb-06efaa0450583fc3a",
            "default_security_group_id": "sg-00d48004609c6a727",
            "dhcp_options_id": "dopt-07fd68cf2759f1387",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d34c4a64e92c4525",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06efaa0450583fc3a",
            "owner_id": "766446780403",
            "tags": {
              "name": "ebsVPC"
            },
            "tags_all": {
              "name": "ebsVPC"
            }
          }
        }
      ]
    }
  ]
}